--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -16,25 +16,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <title>my-view1</title>
 
-    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
-    <script src="../node_modules/wct-browser-legacy/browser.js"></script>
+    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../bower_components/web-component-tester/browser.js"></script>
 
     <!-- Import the element to test -->
-    <script type="module" src="../src/my-view1.js"></script>
+    <link rel="import" href="../src/my-view1.html">
   </head>
   <body>
-    <test-fixture id="BasicView">
+    <test-fixture id="basic">
       <template>
         <my-view1></my-view1>
       </template>
     </test-fixture>
 
-    <script type="module">
+    <script>
       suite('my-view1 tests', function() {
-        test('Number in circle should be 1', function() {
-          var myView = fixture('BasicView');
-          var circle = myView.shadowRoot.querySelector('.circle');
+        var home;
 
+        setup(function() {
+          home = fixture('basic');
+        });
+
+        test('Number in circle should be 1', function() {
+          var circle = Polymer.dom(home.root).querySelector('.circle');
           assert.equal(circle.textContent, '1');
         });
       });
