--- a/datacleaning/index.html
+++ b/datacleaning/index.html
@@ -52,6 +52,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@2.3.1/build/vega-lite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@3.5.0/build/vega-embed.min.js"></script>
     <script src="tfmodel.js"></script>
+    <script src="generator.js"></script>
     <script src="test.js"></script>
 </body>
 
