wow website wow

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>My App</title>
     <meta name="description" content="My App description">
     <base href="/">
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.svg">
     <!-- See https://goo.gl/OOhYW5 -->
     <link rel="manifest" href="manifest.json">
     <!-- See https://goo.gl/qRE0vM -->
