--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
             });
         }
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.9.0"></script>
+    <script src="data.js"></script>
     <script src="tfmodel.js"></script>
     <link rel="import" href="src/my-app.html">
     <style>
