--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-<!-- cd C:\Users\dutta\Documents\GitHub\nationwidehackathon -->
 <!-- polymer serve -->
 <!-- browser-sync start --proxy 0.0.0.0:8081 --files "./**/*" -->
 <!-- firebase deploy -->
@@ -71,6 +70,7 @@
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.9.0"></script>
     <script src="data.js"></script>
+    <script src="generator.js"></script>
     <script src="tfmodel.js"></script>
     <link rel="import" href="src/my-app.html">
     <style>
