--- a/src/my-view3.html
+++ b/src/my-view3.html
@@ -1,37 +1,49 @@
-<!--
-@license
-Copyright (c) 2016 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="shared-styles.html">
-
 <dom-module id="my-view3">
-  <template>
-    <style include="shared-styles">
-      :host {
-        display: block;
+    <template>
+        <style include="shared-styles">
+            :host {
+                display: block;
+                padding: 10px;
+                text-align: center;
+            }
 
-        padding: 10px;
-      }
-    </style>
-
-    <div class="card">
-      <div class="circle">3</div>
-      <h1>View Three</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
-    </div>
-  </template>
-
-  <script>
-    Polymer({
-      is: 'my-view3',
-    });
-  </script>
+            h1 {
+                font-size: 30rem;
+            }
+        </style>
+        <div class="card">
+            <h1>[[price]]</h1>
+            <a href="/view2" tabindex="-1"><p>Go Back</p></a>
+        </div>
+    </template>
+    <script>
+        Polymer({
+            is: 'my-view3',
+            properties: {
+                price: {
+                    type: String,
+                    computed: "getPrice(users)",
+                    notify: true
+                }
+            },
+            getPrice: function (array) {
+                if (array.length == 0)
+                    return 0;
+                var out = array[0].data[9] * 100000;
+                for (var i = 1; i < array.length; i++) {
+                    console.log(array[i]);
+                    out += array[i].data * 100000;
+                }
+                console.log(out);
+                return this.getLabel(out*100);
+            },
+            getLabel: function(price) {
+                min = (price - (price % 10000000)) / 10000000;
+                if (min >= 9) return "900000 - 1000000+";
+                return "$" + min * 100000 + ".00 - $" + (min + 1) * 100000 + ".00";
+            }
+        });
+    </script>
 </dom-module>
